add profile picture

--- a/about/index.html
+++ b/about/index.html
@@ -124,7 +124,7 @@
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
-        <img src="/images/photo2.jpg" alt="Photo de profil" height="400px" style="display : block; margin-right : auto; margin-left : auto;"/>
+        <img src="https://jadeaffolabi.github.io/Jade_Portfolio/images/photo2.jpg" alt="Photo de profil" height="400px" style="display : block; margin-right : auto; margin-left : auto;"/>
 Although I study computer science, my interest in mathematics drives my desire to pursue a career in Data Science. 
 I am also committed to promoting the responsible use of AI, focusing on developing technologies but also considering ethical implications.
 </br>
