--- a/about/index.html
+++ b/about/index.html
@@ -123,13 +123,12 @@
           About
         </h1>
       </header>
-      <img src="./images/photo2.jpg" alt="Photo de profil" height="400px" style="display : block; margin-right : auto; margin-left : auto;"/>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
-        
+        <p><img src="/images/photo2.jpg" alt="Photo de profil" height="400px" style="display : block; margin-right : auto; margin-left : auto;"/>
 Although I study computer science, my interest in mathematics drives my desire to pursue a career in Data Science. 
 I am also committed to promoting the responsible use of AI, focusing on developing technologies but also considering ethical implications.
 </br>
-A fun fact about me: I love experimenting with new pastry recipes as a way to challenge myself.
+A fun fact about me: I love experimenting with new pastry recipes as a way to challenge myself.</p>
       </div>
     </article>
   </div>
