--- a/contact/index.html
+++ b/contact/index.html
@@ -121,13 +121,13 @@
 <br/>
 <div style="display : flex; justify-content: space-between; margin : auto">
 <a href="https://www.linkedin.com/in/jade-affolabi/">
-    <img src="/images/In-Blue-48@2x.png" alt="Link to LinkedIn" style=" display : inline"/>
+    <img src="/Jade_Portfolio/images/In-Blue-48@2x.png" alt="Link to LinkedIn" style=" display : inline"/>
 </a>
 <a href="https://github.com/JadeAffolabi">
-    <img src="/images/github-mark.png" alt="Link to GitHub" width="110" height="110" style=" display : inline"/>
+    <img src="/Jade_Portfolio/images/github-mark.png" alt="Link to GitHub" width="110" height="110" style=" display : inline"/>
 </a>
 <a href="mailto:affolabijade@gmail.com">
-    <img src="/images/Gmail_Logo_128px.png" width="120" height="100"/>
+    <img src="/Jade_Portfolio/images/Gmail_Logo_128px.png" alt="Link to mail" width="120" height="100"/>
 </a>
 </div>
 <div style="height : 220px">
