--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
 
   <meta itemprop="name" content="About">
   <meta itemprop="description" content="I am Jade Affolabi. My home country is Benin and I study Computer Science at Insa Rouen">
-  <meta itemprop="wordCount" content="174">
+  <meta itemprop="wordCount" content="217">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="About">
   <meta name="twitter:description" content="I am Jade Affolabi. My home country is Benin and I study Computer Science at Insa Rouen">
@@ -141,7 +141,11 @@ In this way, they can deepen their know-how and gain professional added value, i
 It is a club that offers first aid training to students. I hold the position of chairman.
 <h3 id="3-welcominsa">3. Welcom&rsquo;INSA</h3>
 <img src="/Jade_Portfolio/images/WelcomeInsaLogo.jpg" alt="Insauve des vies" style=" display : block; margin-right : auto; margin-left : auto;"/>
-This is a programme set up by the school to help welcome and integrate foreign students. I worked for the school as part of this programme
+This is a programme set up by the school to help welcome and integrate foreign students. I worked for the school as part of this programme. 
+<h3 id="4-dorm-services-and-student-support-assistant">4. Dorm Services and Student Support Assistant</h3>
+<p>The school&rsquo;s dorms provide students with a system to borrow household items and board games, and they also offer help if students have issues with their housing.
+I’m helping the residences department keep this system running.</p>
+
       </div>
     </article>
   </div>
